# aissemble

./: .gitignore  DRAFT_RELEASE_NOTES.md  SECURITY.md  llms.txt  pom.xml  ruff.toml
.github/actions/install_dependencies/: action.yaml
.github/actions/split_version/: action.yaml
.github/actions/update_antora/: action.yaml
.github/workflows/: build.yml  dependency-review.yml  prune.yml  publish.yml  release.yml
bom/: pom.xml
bom/aissemble-quarkus-bom/: pom.xml
bom/aissemble-spark-bom/: pom.xml
bom/bom-instantiation/: pom.xml
build-parent/: pom.xml
build-support/: pom.xml
build-support/aissemble-enforcer-extension/: pom.xml
cucumber-report-aggregator/: pom.xml
devops/: ARC_README.md  arc-runner-service-account.yaml  kustomization.yaml  kustomize.sh  runnerset-values.yaml
docs/: antora.yml
docs/antora-aissemble-ui/: package-lock.json  package.json
docs/modules/ROOT/: nav.adoc
extensions/: pom.xml
extensions/extensions-alerting/: pom.xml
extensions/extensions-alerting/extensions-alerting-slack/: pom.xml
extensions/extensions-alerting/extensions-alerting-teams/: pom.xml
extensions/extensions-data-delivery/: pom.xml
extensions/extensions-data-delivery/aissemble-extensions-data-delivery-spark-py/: pom.xml  pyproject.toml
extensions/extensions-data-delivery/extensions-data-delivery-spark/: pom.xml
extensions/extensions-data-delivery/extensions-data-delivery-spark-neo4j/: pom.xml
extensions/extensions-data-delivery/extensions-data-delivery-spark-postgres/: pom.xml
extensions/extensions-data-lineage/: pom.xml
extensions/extensions-docker/: pom.xml
extensions/extensions-docker/aissemble-fastapi/: pom.xml
extensions/extensions-encryption/: README.md  pom.xml
extensions/extensions-helm/: README.md  pom.xml
extensions/extensions-messaging/: pom.xml
extensions/extensions-metadata-service/: pom.xml
extensions/extensions-pipeline-invocation-service/: pom.xml
extensions/extensions-security/: pom.xml
extensions/extensions-transform/: pom.xml
foundation/: pom.xml
foundation/aissemble-foundation-core-python/: pom.xml  pyproject.toml
foundation/aissemble-foundation-core-python/src/policy_manager/configuration/: policy_configuration.py
foundation/aissemble-foundation-core-python/tests/features/steps/: configure_rules_steps.py
foundation/aissemble-foundation-model-training-api/: pom.xml  pyproject.toml
foundation/aissemble-foundation-versioning-service/: pom.xml  pyproject.toml
foundation/foundation-alerting/: pom.xml
foundation/foundation-archetype/: plugins-to-add-to-archetype_test-generator-deploy_pom.xml  pom.xml  test-project-archetype.sh
foundation/foundation-common/: pom.xml
foundation/foundation-configuration-store/: pom.xml
foundation/foundation-core-java/: pom.xml
foundation/foundation-data-access/: pom.xml
foundation/foundation-drift-detection/: pom.xml
foundation/foundation-drift-detection/aissemble-foundation-drift-detection-client-python/: pom.xml  pyproject.toml
foundation/foundation-drift-detection/aissemble-foundation-drift-detection-client-python/tests/features/: environment.py
foundation/foundation-encryption/: pom.xml
foundation/foundation-lineage/: pom.xml
foundation/foundation-lineage/aissemble-foundation-model-lineage/: pom.xml  pyproject.toml
foundation/foundation-lineage/foundation-data-lineage/aissemble-foundation-data-lineage-python/: poetry.toml  pom.xml  pyproject.toml
foundation/foundation-lineage/foundation-data-lineage/aissemble-foundation-data-lineage-python/src/aissemble_data_lineage/: lineage_base.py
foundation/foundation-maven-plugins/: pom.xml
foundation/foundation-mda/: pom.xml
foundation/foundation-messaging/: pom.xml
foundation/foundation-messaging/foundation-messaging-python/aissemble-foundation-messaging-python-client/: pom.xml  pyproject.toml
foundation/foundation-messaging/foundation-messaging-python/aissemble-foundation-messaging-python-client/src/aissemble_messaging/: messaging_client.py
foundation/foundation-metadata/: pom.xml
foundation/foundation-security/: pom.xml
foundation/foundation-security/aissemble-foundation-pdp-client-python/: pom.xml  pyproject.toml
foundation/foundation-transform/: pom.xml
foundation/foundation-upgrade/: pom.xml
test/: pom.xml
test/test-mda-models/: pom.xml
test/test-mda-models/aissemble-test-data-delivery-pyspark-model/: pom.xml  pyproject.toml
test/test-mda-models/aissemble-test-data-delivery-pyspark-model/src/aissemble_test_data_delivery_pyspark_model/resources/dictionaries/: AddressDictionary.json  PysparkDataDeliveryDictionary.json
test/test-mda-models/aissemble-test-data-delivery-pyspark-model/src/aissemble_test_data_delivery_pyspark_model/resources/pipelines/: PysparkDataDeliveryPatterns.json
test/test-mda-models/aissemble-test-data-delivery-pyspark-model/src/aissemble_test_data_delivery_pyspark_model/resources/records/: Address.json  Citizen.json  City.json  CustomData.json  Mayor.json  PersonWithMToOneRelation.json  PersonWithOneToMRelation.json  PersonWithOneToOneRelation.json  RecordWithNonRequiredValidation.json  RecordWithPolicies.json  RecordWithRequiredValidation.json  State.json  Street.json
test/test-mda-models/aissemble-test-data-delivery-pyspark-model/tests/features/: environment.py  pyspark_data_delivery.feature  pyspark_data_encryption.feature  pyspark_data_encryption_vault.feature  pyspark_schema_relations.feature  pyspark_spark_schema.feature  pyspark_validate.feature  record-relation-validation.feature  record_relation.feature
test/test-mda-models/aissemble-test-data-delivery-pyspark-model/tests/features/steps/: pyspark_data_delivery_steps.py  pyspark_data_encryption_steps.py  pyspark_schema_relation_steps.py  pyspark_spark_schema_steps.py  pyspark_validation_steps.py  record_relation_steps.py  record_relation_validation_steps.py
test/test-mda-models/test-machine-learning-base-model/aissemble-machine-learning-training-base/: pom.xml  pyproject.toml
test/test-mda-models/test-machine-learning-model/aissemble-machine-learning-inference/: pom.xml  pyproject.toml
(+610 files in other folders)
