[tool.poetry]
packages = [
    {include = "aissemble_core_bom", from = "src"},
    {include = "aissemble_core_config", from = "src"},
    {include = "aissemble_core_filestore", from = "src"},
    {include = "aissemble_core_metadata", from = "src"},
    {include = "aissembleauth", from = "src"},
    {include = "inference", from = "src"},
    {include = "policy_manager", from = "src"}
]

[project]
name = "aissemble-foundation-core-python"
version = "1.13.0.dev"
description = "Core classes for supporting concepts (alerting, metadata, etc) that are needed across most Python-based components"
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]
readme = "README.md"

[tool.poetry.dependencies]
pydantic = ">=2.8.0"
krausening = ">=20"
cryptography = ">=42.0.4"
pyjwt = ">=2.3.0"
pyjks = ">=20.0.0"
jsonpickle = ">=2.1.0"
aiohttp = ">=3.8.0"
apache-libcloud = ">=3.6.0"
urllib3 = "^1.26.18"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.16"
kafka-python = "^2.0.2"

[tool.poetry.group.dev.dependencies]
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


