[tool.poetry]
packages = [
    {include = "model_versioning", from = "src"},
    {include = "util", from = "src"}
]

[project]
name = "aissemble-foundation-versioning-service"
version = "1.13.0.dev"
description = ""
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]
readme = "README.md"

# NB Later iterations should improve this project and aissemble-versioning-docker's structure, as dependencies from
# the versioning_api.py module within aissemble-versioning-docker are defined here and installed when the corresponding
# wheel for aissemble-versioning-service is installed.
[tool.poetry.dependencies]
mlflow = ">=2.22.0"
fastapi = ">=0.95.0"
uvicorn = {version = "^0.18.0", extras = ["standard"]}

urllib3 = "^2.5.0"

aissemble-foundation-core-python = {path = "../aissemble-foundation-core-python/", develop = true}
aissemble-foundation-pdp-client-python = {path = "../foundation-security/aissemble-foundation-pdp-client-python/", develop = true}

[tool.poetry.group.dev.dependencies]
behave = ">=1.2.6"
nose = ">=1.3.7"
setuptools = "^69.0.3"
kappa-maki = ">=1.0.1"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


