[tool.poetry]
packages = [
    {include = "data_delivery_spark_py", from="src"},
]

[project]
name = "aissemble-extensions-data-delivery-spark-py"
version = "1.13.0.dev"
description = "Contains the core Python functionality of data delivery for Spark"
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]
readme = "README.md"

[tool.poetry.dependencies]
krausening = ">=20"
pyspark = "3.5.5"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"
ruff = "^0.11.7"


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"



