[tool.poetry]
packages = [
    {include = "config", from = "src"},
    {include = "drift", from = "src"}
]

[project]
name = "aissemble-foundation-drift-detection-client-python"
version = "1.13.0.dev"
description = ""
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]
readme = "README.md"

[tool.poetry.dependencies]
pydantic = ">=2.8.0"
requests = ">=2.32.2"
krausening = ">=20"
cryptography = ">=42.0.4"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]
behave = ">=1.2.6"
kappa-maki = ">=1.0.1"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


