[tool.poetry]
packages = [
    {include = "aissemble_model_lineage", from = "src"}
]

[project]
name = "aissemble-foundation-model-lineage"
version = "1.13.0.dev"
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
description = "Model lineage API"
requires-python = ">=3.8"
dynamic = ["version", "dependencies"]
readme = "README.md"

[tool.poetry.dependencies]
openlineage-python = {version = "^0.21.1"}
aissemble-foundation-data-lineage-python = { path = "../foundation-data-lineage/aissemble-foundation-data-lineage-python", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
behave = "^1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
