[tool.poetry]
packages = [
    {include = "aissemble_security", from = "src"}
]

[project]
name = "aissemble-foundation-pdp-client-python"
version = "1.13.0.dev"
description = "REST Policy Decision Point (PDP) client for Python-based components"
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]
readme = "README.md"

[tool.poetry.dependencies]
requests = ">=2.32.2"
urllib3 = "^1.26.18"

[tool.poetry.group.dev.dependencies]
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


