# GENERATED STUB - PLEASE ***DO*** MODIFY

[project]
name = "aissemble-test-data-delivery-pyspark-model"
version = "1.13.0.dev"
description = "Pyspark test module"
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.poetry]
packages = [{include = "aissemble_test_data_delivery_pyspark_model", from = "src" }]

[tool.poetry.dependencies]
confluent-kafka = { version = "2.1.1", optional = true }
aissemble-foundation-pdp-client-python = {path = "../../../foundation/foundation-security/aissemble-foundation-pdp-client-python", develop = true}
aissemble-foundation-data-lineage-python = {path = "../../../foundation/foundation-lineage/foundation-data-lineage/aissemble-foundation-data-lineage-python", develop = true}
aissemble-foundation-core-python = {path = "../../../foundation/aissemble-foundation-core-python", develop = true}
aissemble-extensions-data-delivery-spark-py = {path = "../../../extensions/extensions-data-delivery/aissemble-extensions-data-delivery-spark-py", develop = true}
apache-sedona = "~1.7.1"
kafka-python = "^2.0.2"
krausening = ">=20"
pyspark = "3.5.5"
jsonpickle = "^2.1.0"
pyyaml = "^6.0"
cryptography = ">=42.0.4"
urllib3 = "^1.26.18"

[tool.poetry.group.dev.dependencies]
behave = ">=1.2.6"
nose = ">=1.3.7"
testcontainers = [
    {version = ">=4.5.1", python = ">=3.9,<4.0"},
    {version = "3.7.1", python = ">=3.8, <3.9"},
]
kappa-maki = ">=1.0.1"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


