[tool.poetry]
packages = [
    {include = "aissemble_data_lineage", from = "src"}
]
include = [
    { path = "src/aissemble_data_lineage/default_properties/*" }
]

[project]
name = "aissemble-foundation-data-lineage-python"
version = "1.13.0.dev"
description = "Data lineage API for Python scripts"
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]
readme = "README.md"

[tool.poetry.dependencies]
krausening = ">=20"
kafka-python = "^2.0.2"
openlineage-python = {version = "^0.21.1"}
aissemble-foundation-messaging-python = { path = "../../../foundation-messaging/foundation-messaging-python/aissemble-foundation-messaging-python-client", develop = true}

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
testcontainers = [
    {version = ">=4.5.1", python = ">=3.9,<4.0"},
    {version = "3.7.1", python = ">=3.8, <3.9"},
]
callee = "0.3.1"
confluent-kafka = { version = "2.1.1", optional = true }
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
