[tool.poetry]
packages = [
    {include = "aissemble_messaging", from = "src"},
]
include = [
    { path = "src/aissemble_messaging/service_resources/classpath/*" }
]

[project]
name = "aissemble-foundation-messaging-python"
version = "1.13.0.dev"
description = "Defines a root level messaging architecture in python"
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]
readme = "README.md"

[tool.poetry.dependencies]
py4j = "0.10.9.7"
krausening = ">=20"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
