[project]
name = "aissemble-machine-learning-training-base"
version = "1.13.0.dev"
description = "Description of package"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.poetry]
packages = [{include = "aissemble_machine_learning_training_base", from = "src"}]

[tool.poetry.dependencies]
aissemble-foundation-pdp-client-python = {path = "../../../../foundation/foundation-security/aissemble-foundation-pdp-client-python", develop = true}
aissemble-foundation-core-python = {path = "../../../../foundation/aissemble-foundation-core-python", develop = true}
krausening = ">=20"
mlflow = ">=2.22.0"
kafka-python = "^2.0.2"
pandas = ">=1.5.0"

# Necessary for working with v39.0.0 of crytopgraphy
# https://stackoverflow.com/questions/74981558/error-updating-python3-pip-attributeerror-module-lib-has-no-attribute-openss
pyopenssl = ">22.1.0"

# The latest versions of scipy cap numpy to < 1.26.0, but older versions don't. The recent release of numpy caused
# scipy to downgrade to a version that is incompatible with the latest version of numpy. Presumably, scipy will release
# a new version that is compatible with the latest version of numpy, but until then, we need to explicitly avoid the downgrade.
scipy = "^1.9.3"

# If protobuf is not explicitly downgraded and 4.x is transitively used via mlflow, developers
# may need to set the PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python to achieve backward compatibility
# with any modules that were generated using protobuf 3.x
protobuf = "^3.20.3"



[tool.poetry.group.dev.dependencies]
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
ruff = "^0.11.7"


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


