[project]
name = "aissemble-machine-learning-inference"
version = "1.13.0.dev"
description = "Machine Learning Inference Test Module"
authors = [{name = "aiSSEMBLE Baseline Community", email = "aissemble@bah.com"}]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.poetry]
packages = [{include = "aissemble_machine_learning_inference", from = "src"}]

[tool.poetry.dependencies]
aissemble-foundation-pdp-client-python = {path = "../../../../foundation/foundation-security/aissemble-foundation-pdp-client-python", develop = true}
aissemble-foundation-core-python = {path = "../../../../foundation/aissemble-foundation-core-python", develop = true}
mlflow = "2.10.2"
fastapi = ">=0.95.0"
uvicorn = { version = "^0.18.0", extras = ["standard"]}
grpcio = "^1.50.0"
krausening = ">=20"
pandas = "^1.5.0"

# The latest versions of scipy cap numpy to < 1.26.0, but older versions don't. The recent release of numpy caused
# scipy to downgrade to a version that is incompatible with the latest version of numpy. Presumably, scipy will release
# a new version that is compatible with the latest version of numpy, but until then, we need to explicitly avoid the downgrade.
scipy = "1.9.3"

[tool.poetry.group.dev.dependencies]
behave = ">=1.2.6"
nose = ">=1.3.7"
grpcio-tools = "^1.50.0"
grpcio-testing = "^1.50.0"
kappa-maki = ">=1.0.1"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


